--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <link rel="shortcut icon" href="">
 </head>
 <body>
-<<h1>工事中(古</h1>>
+<h1>工事中(古</h1>
 <!-- Place your content here -->
 <!-- SCRIPTS -->
 <!-- Example: <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script> -->
